--- a/Dialogs/AddCoinDialog.xaml
+++ b/Dialogs/AddCoinDialog.xaml
@@ -5,10 +5,6 @@
     xmlns:local="using:CryptoPortfolioTracker" 
     xmlns:controls="using:CryptoPortfolioTracker.Controls" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    Title="Add a coin to your library"
-    PrimaryButtonText="Add Coin"
-    IsPrimaryButtonEnabled ="False" 
-    CloseButtonText="Cancel"
     DefaultButton="Primary"
     x:Name="Root"
     PrimaryButtonClick="Button_Click_AddCoin"
@@ -24,14 +20,8 @@
                                 KeyDown="AutoSuggestBox_KeyDown"
                                 AnimateBorder="True"
                                 Width="300"
-                                Margin="5,0,0,0"
-                               
-                                />
-
-            <!-- TextBlock Name="FoundCoinText" RelativePanel.Below="ASBox" Width="200" Height="100" Margin="5,30,0,0"/-->
-             
+                                Margin="5,0,0,0"/>
         </RelativePanel>
-
         <Grid Name="DetailsGrid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"  Margin="12,20,12,2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -45,53 +35,36 @@
 
             <StackPanel Name="DetailsStack1" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"  HorizontalAlignment="Center">
                 <Image Name="CoinImage"  Height="80" Margin="0,0,0,0"/>
-                
             </StackPanel>
 
             <ProgressRing x:Name="TheProgressRing" IsActive="False" Grid.Row="1" Margin="0,0,0,0"/>
-            <TextBlock x:Name="bePatientText" Grid.Row="1" Grid.ColumnSpan="2" TextWrapping="WrapWholeWords" x:FieldModifier="public" Text="* Be patient - busy at CoinGecko API at the moment." 
+            <TextBlock x:Uid="CoinDialog_BePatient" x:Name="bePatientText" Grid.Row="1" Grid.ColumnSpan="2" TextWrapping="WrapWholeWords" x:FieldModifier="public" 
                        Visibility="{Binding BePatientVisibility, ElementName=Root}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="0,0,0,0" />
-
-
             <StackPanel Name="DetailsStack2" Grid.Row="1" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Left">
-
                 <RichTextBlock SelectionHighlightColor="Green" Width="200" >
                     <Paragraph TextAlignment="Right">
-                        <Run FontSize="10" FontStyle="Italic" TextDecorations="Underline">ID</Run>
+                        <Run x:Uid="CoinDialog_Id" FontSize="12" FontStyle="Italic" TextDecorations="Underline"/>
                     </Paragraph>
                     <Paragraph x:Name="parId" TextAlignment="Right" FontSize="20" Margin="0,0,0,10"></Paragraph>
-
                     <Paragraph TextAlignment="Right">
-                        <Run FontSize="10" FontStyle="Italic" TextDecorations="Underline">Name</Run>
+                        <Run x:Uid="CoinDialog_Name" FontSize="12" FontStyle="Italic" TextDecorations="Underline"/>
                     </Paragraph>
                     <Paragraph x:Name="parName" TextAlignment="Right" FontSize="20" Margin="0,0,0,10"></Paragraph>
-
                     <Paragraph TextAlignment="Right">
-                        <Run FontSize="10" FontStyle="Italic" TextDecorations="Underline">Symbol</Run>
+                        <Run x:Uid="CoinDialog_Symbol" FontSize="12" FontStyle="Italic" TextDecorations="Underline"/>
                     </Paragraph>
                     <Paragraph x:Name="parSymbol" TextAlignment="Right" FontSize="20" Margin="0,0,0,10"></Paragraph>
-
-
                     <Paragraph TextAlignment="Right" >
-                        <Run FontSize="10" FontStyle="Italic" TextDecorations="Underline" >MarketCap Rank</Run>
+                        <Run x:Uid="CoinDialog_MarketCapRank" FontSize="12" FontStyle="Italic" TextDecorations="Underline" />
                     </Paragraph>
                     <Paragraph x:Name="parRank" TextAlignment="Right" FontSize="20" Margin="0,0,0,10"></Paragraph>
-
-
                     <Paragraph TextAlignment="Right">
-                        <Run FontSize="10" FontStyle="Italic" TextDecorations="Underline">Price [USD]</Run>
+                        <Run x:Uid="CoinDialog_Price" FontSize="12" FontStyle="Italic" TextDecorations="Underline"/>
                     </Paragraph>
                     <Paragraph x:Name="parPrice" TextAlignment="Right" FontSize="20" Margin="0,0,0,10"></Paragraph>
                 </RichTextBlock>
-
-
             </StackPanel>
-
-
         </Grid>
-
     </StackPanel>
-
-
 </ContentDialog>
     
