--- a/Dialogs/AddNoteDialog.xaml
+++ b/Dialogs/AddNoteDialog.xaml
@@ -4,10 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:local="using:CryptoPortfolioTracker" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    Title="Add a new Account"
-    PrimaryButtonText="Accept Note"
-    IsPrimaryButtonEnabled ="True" 
-    CloseButtonText="Cancel"
     DefaultButton="Primary"
     PrimaryButtonClick="Button_Click_AcceptNote">
 
@@ -32,8 +28,7 @@
             <StackPanel.Background>
                 <SolidColorBrush Color ="#eebc3f" Opacity="0.1"/>
             </StackPanel.Background>
-            <TextBlock x:Name="txtBlock1" Margin="10,10,0,5">Note</TextBlock>
-            <TextBox x:Name="NoteText" PlaceholderText="Note goes here...." Margin="10,0,10,0" AutomationProperties.Name="multi-line TextBox" 
+            <TextBox x:Uid="NoteDialog_Note" x:Name="NoteText" PlaceholderForeground="Wheat" Margin="10,0,10,0" AutomationProperties.Name="multi-line TextBox" 
                      TextWrapping="Wrap" AcceptsReturn="True" MinWidth="400" MinHeight="150">
             </TextBox>
         </StackPanel>
