--- a/Views/CoinLibraryView.xaml
+++ b/Views/CoinLibraryView.xaml
@@ -37,9 +37,10 @@
             <RelativePanel>
                 <TextBlock AutomationProperties.AutomationId="__ClickableAreaTextBlock" />
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="{Binding Foreground, ElementName=smallHeaderText, Converter={StaticResource ThemeColorConverter}}" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
-                <TextBlock x:Name="txtCoinLibrary" Text="{Binding ListCoins.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter='Coin Library (|)' }" Margin="36,10,0,0" Foreground="{Binding Foreground, ElementName=txtCoinLibrary, Converter={StaticResource ThemeColorConverter}}" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                <TextBlock x:Uid="Library_Title" x:Name="txtCoinLibrary" Margin="36,10,0,0" Foreground="{Binding Foreground, ElementName=txtCoinLibrary, Converter={StaticResource ThemeColorConverter}}" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                <TextBlock Text="{Binding ListCoins.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" Margin="0,10,0,0" Foreground="{Binding Foreground, ElementName=txtCoinLibrary, Converter={StaticResource ThemeColorConverter}}" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" RelativePanel.RightOf="txtCoinLibrary" />
             </RelativePanel>
-            <TextBlock Grid.Row="1" VerticalAlignment="Bottom" Style="{StaticResource ScenarioDescriptionTextStyle}" Margin="35,0,20,20" TextWrapping="Wrap">The Coin Library is a collection of coins you are interested in. So you will not be distracted or disturbed by insignificant coins. The library gives you also the opportunity to add a coin to your list of assets. </TextBlock>
+            <TextBlock x:Uid="Library_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Style="{StaticResource ScenarioDescriptionTextStyle}" Margin="35,0,20,20" TextWrapping="Wrap"> </TextBlock>
             <Border Grid.Row="2" VerticalAlignment="Stretch" >
                 <Grid Name="LibraryContent" >
                     <Grid.RowDefinitions>
@@ -47,7 +48,7 @@
                         <RowDefinition Height="40"/>
                     </Grid.RowDefinitions>
                     <controls:CoinLibraryListViewControl x:Name="MyCoinLibraryListViewControl" x:FieldModifier="public" Grid.Row="0" />
-                    <Button Content="Add a Coin to the Library" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" 
+                    <Button x:Uid="Library_AddCoin" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" 
                             Command="{Binding ShowAddCoinDialogCommand}" Name="AddCoinButton" Margin="10,10,0,0"/>
                 </Grid>
             </Border>
